tests/ui/type-alias-impl-trait/coherence_cross_crate.stderr
error[E0119]: conflicting implementations of trait `OtherTrait` for type `Alias`
  --> $DIR/coherence_cross_crate.rs:21:1
   |
LL | impl OtherTrait for Alias {}
   | ------------------------- first implementation here
LL | impl OtherTrait for i32 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Alias`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
